syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse {
  User user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  optional string ipAddress = 3;
  optional string userAgent = 4;
  optional string deviceId = 5;
  optional string deviceName = 6;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  User user = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  TokenPayload payload = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
  optional string ipAddress = 2;
  optional string userAgent = 3;
  optional string deviceId = 4;
  optional string deviceName = 5;
}

message RefreshTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message LogoutRequest {
  string userId = 1;
  string refreshToken = 2;
}

message LogoutResponse {
  string message = 1;
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string role = 4;
  string createdAt = 5;
}

message TokenPayload {
  string sub = 1;
  string email = 2;
  string username = 3;
  string role = 4;
}

message ValidateUserRequest {
  string userId = 1;
}

message ValidateUserResponse {
  bool valid = 1;
  User user = 2;
}
